
2008-02-19 tdb
 * Changed 3.1 database to version 3.1.0
 * Added upgrading of cachemap dataset tables + counters, fixing #3272 and
    #3273
 * Replaced explain_tables with a GUI version in admin-Status, fixing #3276
 * Don't show deleted *eprints* in the access log OAI interface
 * Moved a SELECT from List to Database (SELECT 'ALL')
 * Remove stale sequences in create_sequence if they already exist
 * strip spaces and lowercase when normalising for comparison, fixing #3263
 * added delete_from() method to Database, tidied up _do_ordervalues
 * utf8 decode values before passing to Unidecode, fixing #3270
 * added "reorder" command to epadmin to re-write ordering codes

2008-02-20 tdb
 * Request-a-copy email now goes to the correct person, fixing #3260
 * Emailed HTML now rendered with EPrints::XML::to_string
 * Added a plugin to send a test email
 * Ignore non-PID things in the indexer pid file
 * Fixed erase_eprints epadmin command for Oracle
 * Added create_counter/drop_counter methods, fixed currval unavailable error
 * Fixed adding/removing fields for Oracle

2008-02-20 cjg
 * Fixed typo in suffix of Export::Simple s/text/txt/

2008-02-20 cjg
 * Added documents.format to default adv. search

2008-02-20 cjg
 * Cleaned up mixed indentation in 70_autocomplete.js
 * Added "row" prefix for autocompletion to target cells in the row
 * Added "hide" and "show" actions to autocomplete processor.

2008-02-21 tdb
 * Added has_field/has_column methods to database to determine whether a
    dataset/table has the field/column configured
 * An admin plugin to add/remove fields from the database

2008-02-21 cjg
 * generate_views now works with the new Update::Views module. Closes #3264
 * Added --view --lang and --generate options to generate_views

2008-02-21 cjg
 * Added a "uri" method to dataobj which returns a currently unresolveable URI
    for any dataobject. We might make themresolvable later.
 * Added this URI as an "id" attribute when XML exporting data.