@@ -60,6 +60,10 @@ Explain in detail what is going on. May be repeated for greater effect.
 
 Output version information and exit.
 
+=item B<--remove-dataset>
+
+Remove all the fields for a dataset.
+
 =back
 
 =cut
@@ -78,6 +82,7 @@ my $help = 0;
 my $man = 0;
 my $dryrun = 0;
 my $force = 0;
+my $remove_dataset = 0;
 
 GetOptions( 
 	'help|?' => \$help,
@@ -87,12 +92,13 @@ GetOptions(
 	'silent' => \$quiet,
 	'quiet' => \$quiet,
 	'force' => \$force,
+	'remove-dataset' => \$remove_dataset,
 	'dry-run' => \$dryrun
 ) || pod2usage( 2 );
 EPrints::Utils::cmd_version( "lift_embargos" ) if $version;
 pod2usage( 1 ) if $help;
 pod2usage( -exitstatus => 0, -verbose => 2 ) if $man;
-pod2usage( 2 ) if( scalar @ARGV != 3 ); 
+pod2usage( 2 ) unless( scalar @ARGV == 3 or ($remove_dataset and scalar @ARGV == 2) ); 
 
 our $noise = 1;
 $noise = 0 if( $quiet );
@@ -117,34 +123,51 @@ if( !$force && !exists( $fields->{ $datasetid } ) )
 
 my $dataset = $session->get_repository->get_dataset( $datasetid );
 
-if( !$dataset->has_field( $fieldid ) )
+if( $remove_dataset )
 {
-	pod2usage( "$fieldid is not a configured field in the $datasetid dataset - you need to execute this script *before* removing it from your configuration" );
+	remove_dataset( $dataset );
 }
-
-my $system_field = 1;
-for(@{$fields->{ $datasetid }})
+else
 {
-	if( $_->{ name } eq $fieldid )
-	{
-		$system_field = 0;
-	}
+	remove_field( $dataset, $fieldid );
 }
-
-if( !$force && $system_field )
-{
-	print "$fieldid is a system field. You should hide this field in the workflow, rather than try to remove it.\n";
-	exit(1);
-}
-
-my $field = $dataset->get_field( $fieldid );
-
-unless( $force )
-{
-	my $confirm = EPrints::Utils::get_input_confirm( "Are you sure you want to remove the database tables for " . $field->get_name . " (this can NOT be undone!)?" );
-	exit(0) unless $confirm;
-}
-
-$database->remove_field( $dataset, $field );
 
 $session->terminate();
+
+sub remove_dataset
+{
+	$database->drop_dataset_tables( $dataset );
+}
+
+sub remove_field
+{
+	if( !$dataset->has_field( $fieldid ) )
+	{
+		pod2usage( "$fieldid is not a configured field in the $datasetid dataset - you need to execute this script *before* removing it from your configuration" );
+	}
+
+	my $system_field = 1;
+	for(@{$fields->{ $datasetid }})
+	{
+		if( $_->{ name } eq $fieldid )
+		{
+			$system_field = 0;
+		}
+	}
+
+	if( !$force && $system_field )
+	{
+		print "$fieldid is a system field. You should hide this field in the workflow, rather than try to remove it.\n";
+		exit(1);
+	}
+
+	my $field = $dataset->get_field( $fieldid );
+
+	unless( $force )
+	{
+		my $confirm = EPrints::Utils::get_input_confirm( "Are you sure you want to remove the database tables for " . $field->get_name . " (this can NOT be undone!)?" );
+		exit(0) unless $confirm;
+	}
+
+	$database->remove_field( $dataset, $field );
+}
